RESOLVED FIXED138870
[WinCairo] Compile error when CSS_SELECTORS_LEVEL4 is not enabled.
https://bugs.webkit.org/show_bug.cgi?id=138870
Summary [WinCairo] Compile error when CSS_SELECTORS_LEVEL4 is not enabled.
peavo
Reported 2014-11-19 07:09:28 PST
WebCore/css/CSSSelector.cpp has some compile errors when CSS_SELECTORS_LEVEL4 is not enabled.
Attachments
Patch (1.35 KB, patch)
2014-11-19 07:16 PST, peavo
no flags
peavo
Comment 1 2014-11-19 07:16:52 PST
Alex Christensen
Comment 2 2014-11-19 08:44:50 PST
It looks like this was forgotten in https://bugs.webkit.org/show_bug.cgi?id=138822
WebKit Commit Bot
Comment 3 2014-11-19 09:23:05 PST
Comment on attachment 241858 [details] Patch Clearing flags on attachment: 241858 Committed r176319: <http://trac.webkit.org/changeset/176319>
WebKit Commit Bot
Comment 4 2014-11-19 09:23:09 PST
All reviewed patches have been landed. Closing bug.
peavo
Comment 5 2014-11-19 11:02:05 PST
(In reply to comment #2) > It looks like this was forgotten in > https://bugs.webkit.org/show_bug.cgi?id=138822 Thanks for the review :)
Benjamin Poulain
Comment 6 2014-11-19 16:21:07 PST
Arg, sorry. Thanks for fixing!
Note You need to log in before you can comment on or make changes to this bug.