[WinCairo] Compile error when CSS_SELECTORS_LEVEL4 is not enabled. https://bugs.webkit.org/show_bug.cgi?id=138870

Patch by peavo@outlook.com <peavo@outlook.com> on 2014-11-19
Reviewed by Alex Christensen.

* css/CSSSelector.cpp:
(WebCore::simpleSelectorSpecificityInternal):

Canonical link: https://commits.webkit.org/156728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176319 268f45cc-cd09-0410-ab3c-d52691b4dbfc